”Junitのテストレポートの生成、その他軽微な修正”