@@ -12,6 +12,17 @@
 	<!-- プラグインの設定 -->
 	<build>
 		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>2.22.2</version>
+				<configuration>
+					<argLine>
+					--add-opens=java.base/java.io=ALL-UNNAMED
+					--add-opens=java.base/java.lang=ALL-UNNAMED
+					</argLine>
+				</configuration>
+			</plugin>
 			<!-- Javdoc作成に必要なプラグインを導入 -->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
@@ -26,6 +37,8 @@
 					<encoding>UTF-8</encoding>
 					<charset>UTF-8</charset>
 					<docencoding>UTF-8</docencoding>
+                    <doctitle>${javadoc.title}</doctitle>
+                    <windowtitle>${javadoc.title}</windowtitle>
 				</configuration>
 			</plugin>
 			<!-- JUnit 5 でのテスト実行に必要なプラグインを導入 -->
@@ -43,6 +56,24 @@
 					<target>${java.version}</target>
 				</configuration>
 			</plugin>
+
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-site-plugin</artifactId>
+				<version>3.7.1</version>
+				<configuration>
+					<outputDirectory>../docs/test-reports</outputDirectory>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-report-plugin</artifactId>
+				<version>3.1.2</version>
+				<configuration>
+					<outputDirectory>../docs/test-reports</outputDirectory>
+				</configuration>
+			</plugin>
+
 			<!-- 実行可能jarファイル用のプラグイン -->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
